# apphomee

./: .gitignore  README.md  capacitor.config.json  index.html  package.json
.claude/: settings.local.json
.github/workflows/: build.yml
scripts/: generate-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
www/: index.html
