[package]
name = "nuestro-hogar"
version = "1.0.0"
description = "Nuestro Hogar — app de gestión del hogar"
authors = []
edition = "2021"

[lib]
name = "nuestro_hogar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nuestro-hogar"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
