[package]
name = "pawnest"
version = "1.0.0"
description = "pawnest — app de gestión del hogar"
authors = []
edition = "2021"

[lib]
name = "pawnest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pawnest"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
